tidied up css and fixed shift button issue

--- a/style.css
+++ b/style.css
@@ -1,18 +1,7 @@
-@media (min-width: 600px) {
-  #box {
-    width: 50vw;
-    overflow: hidden;
-  }
-}
-
 html {
   box-sizing: border-box;
 }
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
+
 #wrapper {
   height: auto;
   display: flex;
@@ -31,7 +20,6 @@ body {
 }
 .slider--container {
   position: relative;
-  /* width: 95vw; */
   height: 95vh;
   display: flex;
   justify-content: center;
@@ -60,7 +48,6 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  /* height: 100%; */
   background-size: 900px 100%;
 }
 #before-img {
@@ -68,7 +55,6 @@ body {
 }
 #after-img {
   background-image: url("MangereWestNow.jpg");
-  /* width: 50%; */
   width: 100%;
   position: relative;
   clip-path: polygon(0px 0px, 50% 0px, 50% 100%, 0px 100%);
@@ -104,47 +90,9 @@ body {
   background: white;
   cursor: pointer;
 }
-.slider--container .slider--button {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0);
-  left: calc(50% - 18px);
-  top: calc(50% - 18px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.slider--container .slider-button:after {
-  content: "";
-  padding: 3px;
-  display: inline-block;
-  border: solid #f8f8f8;
-  border-width: 0 2px 2px 0;
-  transform: rotate(-45deg);
-  margin-left: 2em;
-}
-.slider--container .slider--button:before {
-  content: "";
-  padding: 3px;
-  display: inline-block;
-  border: solid #ffffff;
-  border-width: 0 2px 2px 0;
-  transform: rotate(135deg);
-}
 .slider--range {
   width: 100%;
   display: none;
-}
-#slider-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  z-index: 1000;
 }
 
 #slider-crop {
@@ -155,14 +103,5 @@ body {
   background-color: white;
   width: 100%;
   height: 100%;
-  /* position: absolute */
   clip-path: polygon(0px 0px, 50% 0px, 50% 100%, 0px 100%);
-}
-
-.footer {
-  /* position: absolute; */
-  z-index: 1;
-  width: 100%;
-  background-color: rgba(45, 45, 45, 0.578);
-  color: white;
 }
